Playing with explicit instantiation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,7 @@ find_package(Threads REQUIRED)
 
 # Turn on taskloaf assertions
 if ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
-    add_definitions(-DTLDEBUG)
+    add_definitions(-DTASKLOAF_DEBUG)
 endif()
 
 ################################################################################
@@ -71,7 +71,8 @@ endif()
 #                              taskloaf library
 ################################################################################
 
-set(TASKLOAF_SRC "src/taskloaf/sized_any.cpp;src/taskloaf/ivar.cpp;src/taskloaf/untyped_future.cpp;src/taskloaf/location.cpp;src/taskloaf/address.cpp;src/taskloaf/default_worker.cpp;src/taskloaf/worker.cpp;src/taskloaf/task_collection.cpp;src/taskloaf/local_comm.cpp;src/taskloaf/launcher.cpp;src/taskloaf/mpi_comm.cpp;src/taskloaf/tlassert.cpp;src/taskloaf/fnc_registry.cpp;src/taskloaf/data.cpp;src/taskloaf/closure.cpp")
+set(TASKLOAF_SRC "src/taskloaf/sized_any.cpp;src/taskloaf/address.cpp;src/taskloaf/debug.cpp;src/taskloaf/fnc_registry.cpp;src/taskloaf/closure.cpp")
+#set(TASKLOAF_SRC "src/taskloaf/sized_any.cpp;src/taskloaf/ivar.cpp;src/taskloaf/untyped_future.cpp;src/taskloaf/location.cpp;src/taskloaf/address.cpp;src/taskloaf/default_worker.cpp;src/taskloaf/worker.cpp;src/taskloaf/task_collection.cpp;src/taskloaf/local_comm.cpp;src/taskloaf/launcher.cpp;src/taskloaf/mpi_comm.cpp;src/taskloaf/tlassert.cpp;src/taskloaf/fnc_registry.cpp;src/taskloaf/data.cpp;src/taskloaf/closure.cpp")
 file(GLOB TASKLOAF_HDR "src/taskloaf/*")
 
 if (BUILD_LIBRARY)
@@ -125,7 +126,6 @@ if(BUILD_TESTS)
 
     add_custom_target(tests)
     taskloaf_tests(closure True)
-    taskloaf_tests(data True)
     taskloaf_tests(worker True)
     taskloaf_tests(comm True)
     taskloaf_tests(untyped_future True)
