--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,6 +130,7 @@ if(BUILD_TESTS)
     taskloaf_tests(worker True)
     taskloaf_tests(comm True)
     taskloaf_tests(future True)
+    taskloaf_tests(remote_ref True)
 
     if (MPI_CXX_FOUND)
         taskloaf_tests(mpi False)
