--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,7 +137,8 @@ if(BUILD_TESTS)
     if (MPI_CXX_FOUND)
         add_executable(mpi "tests/test_mpi_main.cpp;tests/test_mpi.cpp")
         test_link_include(mpi)
-        add_test(mpi mpirun -n 2 mpi)
+        add_test(mpi2procs mpirun -n 2 mpi)
+        add_test(mpi3procs mpirun -n 3 mpi)
         add_dependencies(tests mpi)
     endif()
 
